Fixed the toolbar overlap bug

--- a/stylesheets/sass/components/_code_window.scss
+++ b/stylesheets/sass/components/_code_window.scss
@@ -75,7 +75,6 @@
 		position: absolute;
 		bottom: 0;
 		cursor: move;
-		z-index: $z-console + 2;
 		@include linear-gradient(to top, $cc-lightBlue, lighten($cc-darkBlue, 30%) );
 
 		.code-window-controls {
